hphp/hack/test/typecheck/inout/bad_inout_use_lvalue6.php.exp
File "bad_inout_use_lvalue6.php", line 11, characters 5-12:
You cannot decorate this argument as inout (Parsing[1002])
File "bad_inout_use_lvalue6.php", line 11, characters 11-13:
Arguments for inout parameters must be local variables or simple subscript expressions on vecs, dicts, keysets, or arrays (NastCheck[3050])
